--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="custom-header" ng-controller="HeaderFooter">
+    <div class="custom-header" ng-controller="HeaderFooter" ng-show="ready">
       <div class="custom-header-identity">
         <img class="custom-header-logo" ng-src="{{headerLogoUrl}}"/>  
       </div>
-      <a ng-href="{{backUrl}}" class="custom-header-back-url">{{backUrlLabel}}</a>
+      <a ng-href="{{backUrl}}" class="custom-header-back-url" >{{backUrlLabel}}</a>
       <div class="custom-header-login-prompt">{{loginPromptText}}</div>
     </div>
 
@@ -370,7 +370,7 @@
       </div>
     </div>
 
-    <div class="custom-footer" ng-controller="HeaderFooter">
+    <div ng-hide="inError" class="custom-footer" ng-controller="HeaderFooter">
       <div class="custom-footer-disclaimer">{{disclaimerText}}</div>
     </div>
 
