--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="custom-header" ng-controller="HeaderFooter" ng-show="ready">
+    <div class="custom-header" ng-controller="HeaderFooter" ng-cloak>
       <div class="custom-header-identity">
         <img class="custom-header-logo" ng-src="{{headerLogoUrl}}"/>  
       </div>
@@ -370,7 +370,7 @@
       </div>
     </div>
 
-    <div ng-hide="inError" class="custom-footer" ng-controller="HeaderFooter">
+    <div class="custom-footer" ng-controller="HeaderFooter" ng-cloak>
       <div class="custom-footer-disclaimer">{{disclaimerText}}</div>
     </div>
 
