removing ngsanitize related code

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
       <div class="custom-header-identity">
         <img class="custom-header-logo" ng-src="{{headerLogoUrl}}"/>  
       </div>
-      <a ng-href="{{backUrl}}" class="custom-header-back-url" ng-bind-html="backUrlLabel"></a>
+      <a ng-href="{{backUrl}}" class="custom-header-back-url">{{backUrlLabel}}</a>
       <div class="custom-header-login-prompt">{{loginPromptText}}</div>
     </div>
 
