reset passord instead of forgot

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         </div>
 
-        <a class="forgot" href="#forgot">Forgot Password?</a>
+        <a class="forgot" href="#forgot">Reset Password?</a>
 
       </div>
 
