--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         </div>
 
-        <a class="forgot" href="#forgot">Create/Reset Password?</a>
+        <a class="forgot" href="#forgot">Create/Reset password?</a>
 
       </div>
 
